--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,7 +11,7 @@ body{
     align-items: center;
     margin: 0;
     font-family: 'Raleway', sans-serif;
-    background-color: white;
+    background-color: black;
 }
 
 /*** Header 90% ***/
